fix: prevent zoom on input focus on mobile

--- a/styles/_register.scss
+++ b/styles/_register.scss
@@ -5,7 +5,7 @@
   justify-content: center;
   font-size: 12px;
   margin: 0 auto;
-  margin-top: 50px;
+  
   gap: 35px;
   .register__input {
     display: flex;
