--- a/styles/index.css
+++ b/styles/index.css
@@ -1058,7 +1058,6 @@ h6 {
   justify-content: center;
   font-size: 12px;
   margin: 0 auto;
-  margin-top: 50px;
   gap: 35px;
 }
 .register__field .register__input {
